--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   path: ^1.9.0
   sqflite: ^2.4.1
   sqflite_common_ffi: ^2.3.4+4
+  file_selector: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
