Set up ytdlp_service
- Update yt-dlp
- rename Service to Daemon
- Update yt-dlp on launch
- Detail logging and addLog()

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,11 @@
         "args": []
       },
       {
-        "name": "Flutter: Run Service Mode",
+        "name": "Flutter: Run Daemon Mode",
         "request": "launch",
         "type": "dart",
         "program": "lib/main.dart",
-        "args": ["--dart-define=MODE=service"]
+        "args": ["--dart-define=MODE=daemon"]
       }
     ]
   }
