--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   path: ^1.9.0
   sqflite: ^2.4.1
-  sqflite_common_ffi: ^2.3.4+4
   file_selector: ^1.0.3
   intl: ^0.20.2
   url_launcher: ^6.3.1
+  sqlite3: ^2.7.3
+  sqlite3_flutter_libs: ^0.5.30
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
